added users page

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,7 +2,10 @@
 
 
 <div class="wrapper">
-   
+    <a href="/auth/logout">
+        <button class="w-100 h-100">Logout</button>
+    </a>
+  
 </div>
 
 
