--- a/views/partials/Blog.ejs
+++ b/views/partials/Blog.ejs
@@ -36,7 +36,7 @@
     }
     
 
-    .profileContainer .img {
+    .blogContainer .profileContainer .img {
         width: 40px;
         height: 40px;
         border-radius: 50%;
@@ -44,13 +44,13 @@
         box-shadow: 0 0 0 2px #6262936c;
     }
 
-    .profileContainer .img img {
+    .blogContainer .profileContainer .img img {
         object-fit: contain;
         width: 40px;
         height: 40px;
 
     }
-    .profileContainer h5{
+    .blogContainer .profileContainer h5{
         color:rgba(65, 62, 62, 0.699) !important;
     }
     .blogContainer .heading{
