--- a/views/partials/Navbar.ejs
+++ b/views/partials/Navbar.ejs
@@ -15,7 +15,8 @@
     flex-wrap: wrap;
 }
 .nav h4{
-    font-family: cursive;
+    font-family: cursive !important;
+    color:white !important;
 }
 .nav ul{
     padding-top:10px;
