--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -34,7 +34,7 @@
         <div class="Blogswrapper">
             <div class="blogsBox">
                 <% blogs.forEach((blog)=>{%>
-                    <%- include('partials/Blog.ejs',{blog:blog}) %>
+                    <%- include('partials/Blog.ejs',{blog:blog,user:user}) %>
                  <% }) %>
             </div>
             
