--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -33,12 +33,16 @@
                 <div class="Blogswrapper">
                     <div class="blogsBox">
                         <% blogs.forEach((blog)=>{%>
-                            <%- include('partials/Blog.ejs',{blog:blog,user:user}) %>
-                                <% }) %>
+                            <% if(authenticated){ %>
+                                <%- include('partials/Blog.ejs',{blog:blog,user:user}) %>
+                                  
+                                        <% }else{ %>
+                                            <%- include('partials/Blog.ejs',{blog:blog,user:0}) %>
+                                            <% } %>
+
+                                            <% }) %>
                     </div>
 
                 </div>
-               
-    </div>
 
-    
+    </div>
